# eg

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  class_template.cpp  conftest.py  pyproject.toml  shell.nix
ansible/: Vagrantfile  hello.bash  password.hash  password_hasher.bash  password_hasher.py  vagrant.yml
autotools/: Justfile  README.org  box.m4  remove_lib_prefix.m4  reverse.m4  split.m4
autotools/compiler_vendor/: .gitignore  Justfile  Makefile.am  configure.ac
autotools/compiler_vendor/config/: set_compiler_flags.m4
autotools/equality_am/: .gitignore  Justfile  Makefile.am  configure.ac
autotools/equality_incorrect/: .gitignore  Justfile  Makefile.am  README
bash/: Makefile  arrays.bash  arrays_2.bash  arrays_3.bash  defaults_and_undefined.bash  defaults_and_undefined.bats  defaults_and_undefined_vars.bash  funcname.bash  make_strings_from_seq.bash  return_short_circuit.sh  shunit2.bash
c/: CMakeLists.txt  complex_example_99.c  numeric_casts.c
c/hdf5/: CMakeLists.txt  main.c
c/test_libgsl/: CMakeLists.txt  main.c
cmake/: CMakeLists.txt
cmake/external_project/: CMakeLists.txt
cmake/interface_imported/: CMakeLists.txt  README.md  gif-h-demo.cpp
cmake/macos_madness/: CMakeLists.txt
cpp/: CMakeLists.txt  Makefile  alphanum.cpp  alphanum.hpp  arma_aniso.cpp  arma_sum.cpp  configure  destructor_chain.cpp  int_size_t_comparison.cpp  mod.cpp  qc_ftensor.h  repack.cpp  return_const_reference.cpp  stl.cpp  string_conversion.cpp  test_getenv.cpp  test_lambda.cpp  test_openmp.cpp  test_openmp_2.cpp  test_openmp_copyprivate.cpp  test_template_inheritance.cpp  timer.h  type_name.hpp
cpp/H5CPP/: CMakeLists.txt  main.cpp  write.cpp  write.hpp
cpp/armadillo/: CMakeLists.txt  Makefile  arma_diag.cpp  arma_eye.cpp  arma_fancy_indexing.cpp  arma_resize.cpp  arma_test_mask_index.cpp  arma_test_mask_index.sh  arma_test_save.cpp  arma_test_save.sh  arma_test_wrap.cpp  arma_test_wrap.sh  arma_test_zero.cpp  arma_test_zero.sh  inv_sqrt.cpp  inv_sqrt.sh  pointer_cast.cpp  schur_matrix_vector.cpp  schur_matrix_vector.py  timing.cpp  timing.sh  transpose.cpp
cpp/armadillo/class_template_2/: CMakeLists.txt  consumer.cpp
cpp/armadillo/class_template_function_call/: CMakeLists.txt  class_template.h  consumer.h  main.cpp
cpp/armadillo/class_template_header/: CMakeLists.txt  class_template_header.cpp  class_template_header.h  consumer.cpp
cpp/capi/: CMakeLists.txt  core.cpp  core.h  main.c
cpp/cereal/: CMakeLists.txt  cereal_main.cpp
cpp/class_template/: Makefile  class_template.cpp  class_template.h
cpp/class_template_2/: Makefile  class_template_2.cpp  class_template_2.h  consumer.h  main.cpp
cpp/class_template_function_call/: CMakeLists.txt  class_template.h  consumer.cpp  consumer.h  main.cpp
cpp/class_template_header/: Makefile  class_template_header.h  consumer.cpp  consumer.h  main.cpp
cpp/cppcon/: CMakeLists.txt  memory_safe_cpp.cpp
cpp/doxygen/: CMakeLists.txt  Doxyfile.in  README.md  alphanum.h  alphanum_test.C
cpp/eigen/: CMakeLists.txt
cpp/eigen/simple_first_program/: simple_first_program.cpp  simple_first_program.sh
cpp/eigen/tensor_declaration/: tensor_declaration.cpp  tensor_declaration.sh
cpp/h5cpp/: CMakeLists.txt  arma.cpp  arma_nointerface.cpp  attribute_creation.cpp  h5cpp_arma.hpp  interface.cpp  interface.hpp
cpp/h5cpp_ess-dmsc/: CMakeLists.txt  arma.cpp  h5cpp_string.cpp  interface.cpp  interface.hpp
cpp/h5cpp_steven-vargas/: CMakeLists.txt  main.cpp
cpp/hdf5/: CMakeLists.txt  writedata.cpp
cpp/highfive/: .gitignore  CMakeLists.txt  arma.cpp  arma_chunking.cpp  aview.cpp  common.cpp  common.hpp  complex.hpp  compound.cpp  dtype.cpp  eigen.cpp  enum.cpp  enum_compound_auto.cpp  get_dims.cpp  get_dims.hpp  get_dims_arma.hpp  get_dims_aview.hpp  highfive_arma.hpp  highfive_aview.hpp  iface.cpp  iface.hpp  interface.hpp  pod.cpp  rscf_orbitals_mock.h  span.hpp  stl.cpp  test_span.cpp  tgf.hpp  type_name.hpp
cpp/libint2/: CMakeLists.txt  libint2.cpp
cpp/linking/: 6116188.hpp  6116188_a.cpp  6116188_b.cpp  CMakeLists.txt  missing_symbols.cpp  missing_symbols.h  static_data.hpp  static_data_1.cpp  static_data_2.cpp
cpp/mat2d/: CMakeLists.txt  main.cpp  mat2d.hpp
cpp/rtti/: CMakeLists.txt  rtti_example.cpp  write_typeid.cpp
cpp/seeandsay/: CMakeLists.txt  main.cpp
cpp/templates/: 25187583.cpp  25187583_single.cpp  25200473.cpp  25200473_arma.cpp  25200473_single.cpp  6398890.cpp  CMakeLists.txt  decltype_examples.cpp  dependents.cpp  dtype_utils.h  enable_if.cpp  enable_if.hpp  fibonacci.cpp  highfive_dtype.cpp  nested.cpp  nested.hpp  outer.cpp  static_assert.cpp  struct_traversal.cpp  type_traits_examples.cpp
cpp/unique_ptr/: CMakeLists.txt  destructors.cpp  dummy.hpp  main.cpp  smart_ptr_destructors.cpp  smart_ptr_push_pop.cpp  smart_ptr_push_pop_2.cpp
cpp/xtensor/: CMakeLists.txt  example_1.cpp  fill_array_with_data.cpp  rank4.cpp  time_rank4.cpp
cuda/: CMakeLists.txt  test_rand.cu
cython/daxpy/: CMakeLists.txt  Makefile  mylib.c  mylib.h  setup.py  using_cython.c  using_cython.pxd  using_cython.pyx  using_cython_example.py
eigsolve/: CMakeLists.txt  Justfile  arma.cpp  eigen.cpp  test.jl  test.py
factorial/: factorials.c  factorials.ipy  factorials.rkt
fortran/interfaces/: CMakeLists.txt
fortran/interfaces/src/: fileman_calls.f90  fileman_impls.f90  fileman_interface.f90  impl.cpp
graphviz/: cluster.py  cluster_edge.py  edgewidths.py
julia/: array_literals.jl  printing.jl
kotlin/: Makefile  mutation.kt  mutation.kts
linking/c/: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py  using_ctypes.py  using_cython.pxd  using_cython.pyx  using_cython_example.py
linking/c/include/: mylib.h
linking/c/rust/: Cargo.toml  build.rs
linking/c/rust/src/: main.rs
linking/c/src/: mylib.c
nickel/: users_tut.ncl  (+2 more)
rust/ndarray-vs-nalgebra/: Cargo.toml
rust/ndarray-vs-nalgebra/benches/: bench_eg.rs
rust/ndarray-vs-nalgebra/src/: lib.rs  main.rs
rust/num-crate/: CMakeLists.txt  Cargo.toml  build.rs
rust/num-crate/src/: bind.c  bind.h  lib.rs  main.rs
(+139 files in other folders)
