[package]
name = "test-ndarray"
version = "0.1.0"
authors = ["Eric Berquist <eric.berquist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
ndarray = "*"
# `openblas` not working
ndarray-linalg = { version = "*", features = ["netlib"] }
ndarray-rand = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench_eg"
harness = false

[profile.release]
debug = true
