[package]
name = "num-crate"
version = "0.1.0"
authors = ["Eric Berquist <eric.berquist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
num-complex = "*"

[build-dependencies]
bindgen = "0.72.0"
cmake = "0.1.54"
